--- a/src/index.css
+++ b/src/index.css
@@ -10,11 +10,6 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
 #root {
   display: flex;
   width: 100vw;
@@ -27,40 +22,43 @@ code {
   0% {
     transform: scale(0.8);
   }
+
   50% {
     transform: scale(1);
   }
+
   100% {
     transform: scale(0.8);
   }
 }
 
 .button {
-  display:inline-block;
-  padding:0.5em 3em;
-  margin:0 0.3em 0.3em 0;
+  cursor: pointer;
+  display: inline-block;
+  padding: 0.5em 3em;
+  margin: 0 0.3em 0.3em 0;
   color: #494949;
   text-transform: uppercase;
   text-decoration: none;
   background: #ffffff;
   box-sizing: border-box;
   border: 4px solid #494949;
-  font-family:'Roboto',sans-serif;
-  font-weight:400;
-  text-align:center;
-  text-decoration:none;
-  text-transform:uppercase;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+  text-align: center;
+  text-decoration: none;
+  text-transform: uppercase;
   transition: all 0.4s ease 0s;
 }
 
-.button:hover{
+.button:hover {
   color: #ffffff;
   background: #f6b93b;
   border-color: #f6b93b;
   transition: all 0.4s ease 0s;
 }
 
-.button:active{
+.button:active {
   color: #ffffff;
   background: #f6b93b;
   border-color: #f6b93b;
@@ -105,18 +103,23 @@ code {
 .weather .weather-image.Clouds {
   background-image: url('https://cdn2.iconfinder.com/data/icons/weather-color-2/500/weather-22-256.png');
 }
+
 .weather .weather-image.Rain {
   background-image: url('https://cdn2.iconfinder.com/data/icons/weather-color-2/500/weather-32-256.png');
 }
+
 .weather .weather-image.Snow {
   background-image: url('https://cdn2.iconfinder.com/data/icons/weather-color-2/500/weather-24-256.png');
 }
+
 .weather .weather-image.Clear {
   background-image: url('https://cdn2.iconfinder.com/data/icons/weather-color-2/500/weather-01-256.png');
 }
+
 .weather .weather-image.Thunderstom {
   background-image: url('https://cdn2.iconfinder.com/data/icons/weather-color-2/500/weather-23-256.png');
 }
+
 .weather .weather-image.Drizzle {
   background-image: url('https://cdn2.iconfinder.com/data/icons/weather-color-2/500/weather-30-256.png');
 }
