fix: improve accessibility change the text color

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body {
   font-size: 16px;
   background-color: #f1f1f1;
-  color: #78868A;
+  color: #0F0F0F;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
